Make breadcrumps wrap when they no longer fit

--- a/app/assets/stylesheets/wiki/_breadcrumbs.scss
+++ b/app/assets/stylesheets/wiki/_breadcrumbs.scss
@@ -1,6 +1,7 @@
 .breadcrumbs {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   margin-top: $margin / 4;
   font-size: 14px;
   line-height: 1.5em;
